# safe-storage

./: Cargo.toml  README.md  config.yaml
safe-storage-client/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
safe-storage-client/src/: App.vue  index.scss  main.ts  routes.ts
safe-storage-client/src/pages/: Index.vue  Login.vue
safe-storage-client/src/stores/: userStore.ts
src/: database.rs  main.rs  user.rs
src/routes/: auth.rs  mod.rs  user_info.rs
