[package]
name = "safe-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.3"
actix-multipart = "0.4.0-beta.13"
actix-identity = "0.4.0-beta.8"
serde = { version = "1.0.136", features = ["derive", "std"] }
serde_yaml = "0.8.23"
rand = "0.8.5"